@@ -457,13 +457,13 @@ BEGIN
   IDS_SHTCTCANTREFERTOITSELF "A shortcut cannot refer to itself!"
   IDS_ABASEINVALID          "This alias' target [%s:%s:%s] is not a normal entry or already an alias base."
   IDS_SBASEINVALID          "This shortcut's target [%s:%s:%s] is not a normal entry or already a shortcut base."
-  IDS_MUSTHAVETARGET        "This entry must have a target entry."
+  IDS_MUSTHAVETARGET        "This entry must have a valid target entry."
   IDS_SELECTREPORT          "Please select report to view."
   IDS_NOREPORTSEXIST        "No reports exist in the same directory as the current database."
   IDS_VIEWALIASESBTN        "View Aliases"
   IDS_VIEWSHORTCUTSBTN      "View Shortcuts"
-  IDS_MULTIPLETARGETSFOUND  "??"
-  IDS_TARGETNOTFOUND        "??"
+  IDS_MULTIPLETARGETSFOUND  "There are more than one entry that fits your selection. Please be more specific."
+  IDS_TARGETNOTFOUND        "No entry exists within this database matching your specifications."
 END
 
 STRINGTABLE
